Add functionality for the Kernal ControlCenter

--- a/openTCS-NeNa-CommAdapter-ROS2/src/main/java/nl/saxion/nena/opentcs/commadapter/ros2/control_center/Ros2CommAdapterPanel.form
+++ b/openTCS-NeNa-CommAdapter-ROS2/src/main/java/nl/saxion/nena/opentcs/commadapter/ros2/control_center/Ros2CommAdapterPanel.form
@@ -8,7 +8,7 @@
     </Component>
   </NonVisualComponents>
   <Properties>
-    <Property name="name" type="java.lang.String" value="Ros2CommunicationAdapterPanel" noResource="true"/>
+    <Property name="name" type="java.lang.String" value="Ros2CommAdapterPanel" noResource="true"/>
   </Properties>
   <AccessibilityProperties>
     <Property name="AccessibleContext.accessibleName" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
